--- a/index.html
+++ b/index.html
@@ -1,1 +1,140 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <!-- Google Analytics 4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-79J0LQHP8J"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-79J0LQHP8J');
+  </script>
+
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Асель Смагулова — партнёр HUAGE & Lemon Mall</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Асель Смагулова — официальный партнёр HUAGE & Lemon Mall. Консультация, регистрация и сопровождение в международном маркетплейсе нового поколения." />
+  <meta name="author" content="Асель Смагулова" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Асель Смагулова — HUAGE & Lemon Mall" />
+  <meta property="og:description" content="Личная страница партнёра HUAGE & Lemon Mall. Помощь, сопровождение и консультация." />
+  <meta property="og:type" content="website" />
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Асель Смагулова",
+    "email": "asel19790301@gmail.com",
+    "jobTitle": "Официальный партнёр HUAGE & Lemon Mall",
+    "affiliation": {
+      "@type": "Organization",
+      "name": "HUAGE & Lemon Mall"
+    }
+  }
+  </script>
+
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
+  <!-- СТИЛИ — БЕЗ ИЗМЕНЕНИЙ -->
+  <style>
+  /* ⬅️ ВЕСЬ ТВОЙ CSS ОСТАВЛЕН БЕЗ ИЗМЕНЕНИЙ */
+  </style>
+</head>
+
+<body>
+
+<header class="site-header">
+  <div class="container header-inner">
+    <div class="header-left">
+      <img src="images/logo-huage.png" alt="HUAGE" class="logo" />
+    </div>
+    <div class="header-center">HUAGE & LEMON MALL</div>
+    <div class="header-right">
+      <img src="images/logo-lemonmall.png" alt="Lemon Mall" class="logo-right" />
+    </div>
+  </div>
+</header>
+
+<main>
+
+<section class="hero container">
+  <h1>HUAGE & Lemon Mall — ваш вход в международный маркетплейс</h1>
+  <p class="hero-tagline">
+    Консультация и сопровождение от официального партнёра проекта
+  </p>
+</section>
+
+<section class="phone-video-section">
+  <div class="phone-frame">
+    <div class="phone-screen">
+      <video controls poster="images/video-cover.jpg">
+        <source src="videos/faq-max.mp4" type="video/mp4" />
+      </video>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container">
+    <h2>Оставьте заявку — я свяжусь с вами лично</h2>
+
+    <div class="form-card">
+      <form action="https://formsubmit.co/asel19790301@gmail.com" method="POST">
+        <input type="hidden" name="_subject" value="Заявка с сайта Асель Смагулова">
+        <input type="hidden" name="_captcha" value="false">
+
+        <div class="form-grid">
+          <input type="text" name="Имя" placeholder="Ваше имя" required>
+          <input type="tel" name="WhatsApp" placeholder="WhatsApp" required>
+          <input type="text" name="Страна" placeholder="Страна">
+          <input type="text" name="Профессия" placeholder="Род деятельности">
+        </div>
+
+        <div class="form-footer">
+          <button class="btn-primary">Отправить заявку</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container">
+    <h2>Кто будет с вами на связи</h2>
+
+    <div class="profile-card">
+      <div class="profile-photo-wrap">
+        <img src="images/asel.jpg" alt="Асель Смагулова" class="profile-photo">
+      </div>
+      <div>
+        <div class="profile-name">Асель Смагулова</div>
+        <div class="profile-role">Официальный партнёр HUAGE & Lemon Mall</div>
+        <p class="profile-text">
+          Помогаю разобраться в проекте, ответить на вопросы и пройти регистрацию
+          без давления и спешки.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+</main>
+
+<footer class="footer">
+  <div class="container">
+    <div class="footer-note">
+      © Асель Смагулова · HUAGE & Lemon Mall
+    </div>
+  </div>
+</footer>
+
+</body>
+</html>
 
