--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <meta name="twitter:image" content="https://asel.lemonmall.kz/images/preview.jpg" />
 
   <!-- Favicon -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="https://asel.lemonmall.kz/favicon.ico" type="image/x-icon" />
 
   <!-- JSON-LD (структурированные данные) -->
  <script type="application/ld+json">
@@ -38,11 +38,11 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "HUAGE & Lemon Mall",
-  "url": "https://lemonmall.kz/",
-  "logo": "https://lemonmall.kz/images/preview.jpg",
-  "description": "Lemon Mall — международный маркетплейс нового поколения, развиваемый совместно с компанией HUAGE.",
+  "url": "https://asel.lemonmall.kz/",
+  "logo": "https://asel.lemonmall.kz/images/preview.jpg",
+  "description": "HUAGE & Lemon Mall — маркетплейс нового поколения с уникальной партнёрской программой.",
   "sameAs": [
-    "https://lemonmall.kz"
+    "https://asel.lemonmall.kz"
   ]
 }
 </script>
