--- a/index.html
+++ b/index.html
@@ -1,36 +1,48 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <!-- Google Analytics 4 (GA4) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-79J0LQHP8J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-79J0LQHP8J', {
+    page_title: document.title,
+    page_path: window.location.pathname
+  });
+</script>
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HUAGE & Lemon Mall — удобные покупки и партнёрская программа</title>
+  <title>HUAGE & Lemon Mall — международный маркетплейс нового поколения</title>
 
   <!-- SEO -->
   <meta name="description"
-        content="HUAGE & Lemon Mall — маркетплейс нового поколения. Уникальные товары, партнёрская программа и бонусы для клиентов." />
+        content="HUAGE & Lemon Mall — международный проект нового поколения. Маркетплейс Lemon Mall и партнёрская программа HUAGE: возможности, статусы, привилегии и регистрация." />
   <meta name="keywords"
-        content="<meta name="keywords" content="HUAGE & Lemon Mall, маркетплейс, партнёрская программа, онлайн-бизнес, бонусы, эксклюзивные товары" />
-  <meta name="author" content="Lemon Mall & HUAGE" />
+        content="HUAGE, Lemon Mall, маркетплейс, партнёрская программа, Baishi Health, международный проект, привилегированный клиент, MLM, бизнес онлайн" />
+  <meta name="author" content="HUAGE & Lemon Mall" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="HUAGE & Lemon Mall — маркетплейс нового поколения" />
+  <meta property="og:title" content="HUAGE & Lemon Mall — международный проект нового поколения" />
   <meta property="og:description"
-        content="Откройте уникальные возможности партнёрской программы и эксклюзивные товары от HUAGE & Lemon Mall." />
+        content="Узнайте, что такое HUAGE & Lemon Mall, какие возможности даёт партнёрская программа и как стать привилегированным клиентом маркетплейса." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://asel.lemonmall.kz" />
-  <meta property="og:image" content="https://asel.lemonmall.kz/images/preview.jpg" />
+  <meta property="og:url" content="https://lyailya.lemonmall.kz" />
+  <meta property="og:image" content="https://lyailya.lemonmall.kz/images/preview.jpg" />
   <meta property="og:locale" content="ru_RU" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="HUAGE & Lemon Mall — маркетплейс нового поколения" />
+  <meta name="twitter:title" content="HUAGE & Lemon Mall — международный проект нового поколения" />
   <meta name="twitter:description"
-        content="Кратко и по делу: Узнайте о партнёрской программе и бонусах от HUAGE & Lemon Mall." />
-  <meta name="twitter:image" content="https://asel.lemonmall.kz/images/preview.jpg" />
+        content="Кратко и по делу о проекте HUAGE & Lemon Mall: маркетплейс, партнёрская программа, привилегии для партнёров." />
+  <meta name="twitter:image" content="https://lyailya.lemonmall.kz/images/preview.jpg" />
 
   <!-- Favicon -->
-  <link rel="icon" href="https://asel.lemonmall.kz/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
   <!-- JSON-LD (структурированные данные) -->
  <script type="application/ld+json">
@@ -38,11 +50,11 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "HUAGE & Lemon Mall",
-  "url": "https://asel.lemonmall.kz/",
-  "logo": "https://asel.lemonmall.kz/images/preview.jpg",
-  "description": "HUAGE & Lemon Mall — маркетплейс нового поколения с уникальной партнёрской программой.",
+  "url": "https://lyailya.lemonmall.kz/",
+  "logo": "https://lyailya.lemonmall.kz/images/preview.jpg",
+  "description": "Lemon Mall — международный маркетплейс нового поколения, развиваемый совместно с компанией HUAGE.",
   "sameAs": [
-    "https://asel.lemonmall.kz"
+    "https://lyailya.lemonmall.kz"
   ]
 }
 </script>
@@ -51,11 +63,11 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "url": "https://lemonmall.kz/",
+  "url": "https://lyailya.lemonmall.kz/",
   "name": "Lemon Mall",
   "potentialAction": {
     "@type": "SearchAction",
-    "target": "https://lemonmall.kz/?q={search_term_string}",
+    "target": "https://lyailya.lemonmall.kz/?q={search_term_string}",
     "query-input": "required name=search_term_string"
   }
 }
@@ -66,7 +78,7 @@
   "@context": "https://schema.org",
   "@type": "WebPage",
   "name": "HUAGE & Lemon Mall — международный маркетплейс нового поколения",
-  "url": "https://lemonmall.kz/",
+  "url": "https://lyailya.lemonmall.kz/",
   "description": "Lemon Mall — международный маркетплейс нового поколения с товарами из Китая и стран СНГ. Узнайте о развитии проекта HUAGE и его возможностях."
 }
 </script>
@@ -864,12 +876,12 @@
             <img src="images/max-barin.jpg" alt="Макс Барин" class="profile-photo" />
           </div>
           <div>
-            <div class="profile-name">Макс Барин</div>
-            <div class="profile-role">Официальный партнёр HUAGE & Lemon Mall, IT специалист и маркетолог</div>
+            <div class="profile-name">Ляйля Ашикбаева</div>
+            <div class="profile-role">Официальный партнёр HUAGE & Lemon Mall, юрист и просто мама</div>
             <p class="profile-text">
-              Я помогаю людям разобраться в проекте HUAGE & Lemon Mall простым языком:
-              без сложных схем, агрессивных продаж и завышенных обещаний.
-              Моя задача — объяснить, подходит ли вам проект и как зайти максимально безопасно.
+             Я помогаю разобраться в проекте HUAGE & Lemon Mall простым и понятным языком —
+без сложных схем, давления и громких обещаний.
+Моя цель — честно показать, подходит ли вам этот проект и как войти в него максимально безопасно.
             </p>
             <ul class="profile-bullets">
               <li>Объясняю модель проекта шаг за шагом.</li>
@@ -1021,16 +1033,16 @@
       <div class="footer-top">
         <div class="social-links">
           <!-- ПОДСТАВЬ СВОИ РЕАЛЬНЫЕ ССЫЛКИ -->
-          <a href="https://youtube.com/@lemonmall_huage" target="_blank" rel="noopener" aria-label="YouTube">
+          <a href="https://youtube.com/channel/UCyCrr-VPetXTrPrzEEH9aGQ?si=nMtas3PCWvkRrS5M" target="_blank" rel="noopener" aria-label="YouTube">
             <img src="images/icon-youtube.png" alt="YouTube" />
           </a>
-          <a href="https://instagram.com/" target="_blank" rel="noopener" aria-label="Instagram">
+          <a href="https://www.instagram.com/lyilyaashikbaeva?igsh=YmE3bHE3NWwzYjZz" target="_blank" rel="noopener" aria-label="Instagram">
             <img src="images/icon-instagram.png" alt="Instagram" />
           </a>
-          <a href="https://tiktok.com/@..." target="_blank" rel="noopener" aria-label="TikTok">
+          <a href="https://www.tiktok.com/@lulu19617?_r=1&_t=ZS-93HajyMQY9E" target="_blank" rel="noopener" aria-label="TikTok">
             <img src="images/icon-tiktok.png" alt="TikTok" />
           </a>
-          <a href="https://wa.me/77085080140" target="_blank" rel="noopener" aria-label="WhatsApp">
+          <a href="https://wa.me/77022013128" target="_blank" rel="noopener" aria-label="WhatsApp">
             <img src="images/icon-whatsapp.png" alt="WhatsApp" />
           </a>
         </div>
