--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <meta property="og:description"
         content="Узнайте, что такое HUAGE & Lemon Mall, какие возможности даёт партнёрская программа и как стать привилегированным клиентом маркетплейса." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://lyailya.lemonmall.kz" />
-  <meta property="og:image" content="https://lyailya.lemonmall.kz/images/preview.jpg" />
+  <meta property="og:url" content="https://asel.lemonmall.kz" />
+  <meta property="og:image" content="https://asel.lemonmall.kz/images/preview.jpg" />
   <meta property="og:locale" content="ru_RU" />
 
   <!-- Twitter -->
@@ -39,7 +39,7 @@
   <meta name="twitter:title" content="HUAGE & Lemon Mall — международный проект нового поколения" />
   <meta name="twitter:description"
         content="Кратко и по делу о проекте HUAGE & Lemon Mall: маркетплейс, партнёрская программа, привилегии для партнёров." />
-  <meta name="twitter:image" content="https://lyailya.lemonmall.kz/images/preview.jpg" />
+  <meta name="twitter:image" content="https://asel.lemonmall.kz/images/preview.jpg" />
 
   <!-- Favicon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -50,11 +50,11 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "HUAGE & Lemon Mall",
-  "url": "https://lyailya.lemonmall.kz/",
-  "logo": "https://lyailya.lemonmall.kz/images/preview.jpg",
+  "url": "https://asel.lemonmall.kz/",
+  "logo": "https://asel.lemonmall.kz/images/preview.jpg",
   "description": "Lemon Mall — международный маркетплейс нового поколения, развиваемый совместно с компанией HUAGE.",
   "sameAs": [
-    "https://lyailya.lemonmall.kz"
+    "https://asel.lemonmall.kz"
   ]
 }
 </script>
@@ -63,11 +63,11 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "url": "https://lyailya.lemonmall.kz/",
+  "url": "https://asel.lemonmall.kz/",
   "name": "Lemon Mall",
   "potentialAction": {
     "@type": "SearchAction",
-    "target": "https://lyailya.lemonmall.kz/?q={search_term_string}",
+    "target": "https://asel.lemonmall.kz/?q={search_term_string}",
     "query-input": "required name=search_term_string"
   }
 }
@@ -78,7 +78,7 @@
   "@context": "https://schema.org",
   "@type": "WebPage",
   "name": "HUAGE & Lemon Mall — международный маркетплейс нового поколения",
-  "url": "https://lyailya.lemonmall.kz/",
+  "url": "https://asel.lemonmall.kz/",
   "description": "Lemon Mall — международный маркетплейс нового поколения с товарами из Китая и стран СНГ. Узнайте о развитии проекта HUAGE и его возможностях."
 }
 </script>
@@ -876,8 +876,8 @@
             <img src="images/max-barin.jpg" alt="Макс Барин" class="profile-photo" />
           </div>
           <div>
-            <div class="profile-name">Ляйля Ашикбаева</div>
-            <div class="profile-role">Официальный партнёр HUAGE & Lemon Mall, юрист и просто мама</div>
+            <div class="profile-name">Асель Смагулова</div>
+            <div class="profile-role">Официальный партнёр HUAGE & Lemon Mall, предприниматель и просто мама</div>
             <p class="profile-text">
              Я помогаю разобраться в проекте HUAGE & Lemon Mall простым и понятным языком —
 без сложных схем, давления и громких обещаний.
@@ -1033,16 +1033,16 @@
       <div class="footer-top">
         <div class="social-links">
           <!-- ПОДСТАВЬ СВОИ РЕАЛЬНЫЕ ССЫЛКИ -->
-          <a href="https://youtube.com/channel/UCyCrr-VPetXTrPrzEEH9aGQ?si=nMtas3PCWvkRrS5M" target="_blank" rel="noopener" aria-label="YouTube">
+          <a href="https://youtube.com/" target="_blank" rel="noopener" aria-label="YouTube">
             <img src="images/icon-youtube.png" alt="YouTube" />
           </a>
-          <a href="https://www.instagram.com/lyilyaashikbaeva?igsh=YmE3bHE3NWwzYjZz" target="_blank" rel="noopener" aria-label="Instagram">
+          <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Instagram">
             <img src="images/icon-instagram.png" alt="Instagram" />
           </a>
-          <a href="https://www.tiktok.com/@lulu19617?_r=1&_t=ZS-93HajyMQY9E" target="_blank" rel="noopener" aria-label="TikTok">
+          <a href="https://www.tiktok.com/" target="_blank" rel="noopener" aria-label="TikTok">
             <img src="images/icon-tiktok.png" alt="TikTok" />
           </a>
-          <a href="https://wa.me/77022013128" target="_blank" rel="noopener" aria-label="WhatsApp">
+          <a href="https://wa.me/77789171969" target="_blank" rel="noopener" aria-label="WhatsApp">
             <img src="images/icon-whatsapp.png" alt="WhatsApp" />
           </a>
         </div>
