--- a/index.html
+++ b/index.html
@@ -1033,13 +1033,13 @@
       <div class="footer-top">
         <div class="social-links">
           <!-- ПОДСТАВЬ СВОИ РЕАЛЬНЫЕ ССЫЛКИ -->
-          <a href="https://youtube.com/" target="_blank" rel="noopener" aria-label="YouTube">
+          <a href="https://youtube.com/channel/UCbUyNyMNu1cf-icg0K1w-Lw?si=HgfjWrk8wDa50Pk-" target="_blank" rel="noopener" aria-label="YouTube">
             <img src="images/icon-youtube.png" alt="YouTube" />
           </a>
-          <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Instagram">
+          <a href="https://www.instagram.com/aksu_travels?igsh=bWw5cHQ3M29yaDZr" target="_blank" rel="noopener" aria-label="Instagram">
             <img src="images/icon-instagram.png" alt="Instagram" />
           </a>
-          <a href="https://www.tiktok.com/" target="_blank" rel="noopener" aria-label="TikTok">
+          <a href="https://www.tiktok.com/@assel_2384?_r=1&_t=ZS-93UZx4BQgib" target="_blank" rel="noopener" aria-label="TikTok">
             <img src="images/icon-tiktok.png" alt="TikTok" />
           </a>
           <a href="https://wa.me/77789171969" target="_blank" rel="noopener" aria-label="WhatsApp">
